# exercism-solutions

./: .gitignore  README.md
crystal/Pi/: pi.cr
julia/: diff-of-squares.pluto.html  diff-of-squares.pluto.jl
julia/binary-search/: bin-search2.jl  binary-search.jl  runtests.jl
julia/clock/: README.md  clock.jl
julia/custom-set/: custom-set.jl
julia/difference-of-squares/: difference-of-squares.jl
julia/etl/: etl.jl  runtests.jl
julia/largest-series-product/: largest-series-product.jl
julia/nucleotide-count/: nucleotide-count copy 2.jl  nucleotide-count copy 3.jl  nucleotide-count copy.jl  nucleotide-count.jl  nucleotide-count.pluto.jl
julia/robot-name/: README.md  robot-name.jl
julia/rotational-cipher/: rotational-cipher.jl
julia/saddle-points/: runtests.jl  saddle-points.jl
julia/scrabble-score/: README.md  scrabble-score.jl
julia/secret-handshake/: secret-handshake.jl
julia/sum-of-multiples/: sum-of-multiples.jl
julia/word-count/: word-count.jl
rust/: rust-exercism.code-workspace
rust/clock/: Cargo.toml
rust/dot-dsl/: Cargo.toml
rust/dot-dsl/dot_dsl_derive/: Cargo.toml
rust/dot-dsl/dot_dsl_derive/src/: lib.rs
rust/dot-dsl/src/: lib.derivemacro.rs  lib.funct.rs  lib.macro.rs  lib.rs  lib.struct.rs
rust/dot-dsl/tests/: dot-dsl.rs
rust/prime-factors/: Cargo.toml
rust/simple-linked-list/: Cargo.toml
unison/acronym/: .unisonHistory  acronym.u
unison/hello-world/: .unisonHistory  hello.u
vlang/collatz-conjecture/: collatz-conjecture.v  collatz-conjecture.v12  collatz-conjecture.v13  collatz-conjecture_v4
zig/bob/: bob.zig  (+1 more)
(+159 files in other folders)
